--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -30,8 +30,7 @@
         <benefit-card
             card-title="Seus projetos guiados do zero"
             img-path="/assets/project-guide.png"
-            card-description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur."
-        >
+            card-description=""
         </benefit-card>
     </section>
     <section class="cta-section pad-70">
