--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -24,13 +24,13 @@
         <benefit-card
             card-title="Equipe capacitada"
             img-path="/assets/team.png"
-            card-description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur."
+            card-description="O cliente é muito importante, o cliente será seguido pelo cliente. Assim como minha missa. Alguns na urna hendrerit. Que os filhos sejam bons amigos da família;"
         >
         </benefit-card>
         <benefit-card
             card-title="Seus projetos guiados do zero"
             img-path="/assets/project-guide.png"
-            card-description=""
+            card-description="O cliente é muito importante, o cliente será seguido pelo cliente. Assim como minha missa. Alguns na urna hendrerit. Que os filhos sejam bons amigos da família;"
         </benefit-card>
     </section>
     <section class="cta-section pad-70">
