--- a/src/app/components/newsletter-form/newsletter-form.component.html
+++ b/src/app/components/newsletter-form/newsletter-form.component.html
@@ -3,7 +3,7 @@
         <h3>
             Fique por dentro de tendências
         </h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur pellentesque nibh nibh, at maximus ante fermentum sit amet. Pellentesque commodo lacus at sodales sodales. Quisque sagittis orci ut diam condimentum, vel euismod erat placerat. In iaculis arcu eros, eget temp</p>
+        <p> não deixe que sua empresa fique para trás. Estamos comprometidos em manter você informado sobre as últimas inovações e melhores práticas no mundo da tecnologia, garantindo que você esteja sempre um passo à frente da concorrência.</p>
     </div>
     <form [formGroup]="newsletterForm">
         <label for="name">Name</label>
